# data_viz

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/: color_system.py  gallery.py  showcase.py
src/data_vizual/: __init__.py  core.py
tests/: test_core.py
