[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data_vizual"
version = "0.1.0"
description = "Bare-bones pandas helpers and styled matplotlib plots for building a personal data-visualization aesthetic."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Esteban B. Castro", email = "ebcastro@dons.usfca.edu" }]
keywords = ["pandas", "matplotlib", "data-visualization", "plotting"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "pandas>=1.3",
    "matplotlib>=3.4",
]

[project.optional-dependencies]
# Install with:  pip install "data_vizual[dev]"
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/EstebanBC1/data_viz"
Repository = "https://github.com/EstebanBC1/data_viz"

[tool.hatch.build.targets.wheel]
packages = ["src/data_vizual"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
